tests/pact/bad/bad-pact.repl
(define-keyset 'k (sig-keyset))
(module parensfordays 'k
  (defpact foo ()
    (step "foo")
    (step-with-rollback "foo" "bar"))) ; rollbacks not allowed on the last step
